feat: add additional project

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                         <img class="singolo-image image" src="assets/images/singolo.png" alt="Singolo">
                         <div class="mask mask-1"></div>
                         <div id="singolo" class="content">
-                            <h2 class="project-heading">Singolo</h2>
+                            <h2 data-content="Singolo" class="project-heading">Singolo</h2>
                             <p data-content="Singolo is  a single page website" class="project-description">Singolo is  a single page website
                             </p>
                             <p class="technologies">
@@ -74,6 +74,39 @@
                             <div class="links-container">
                                 <a data-content="Demo" href="https://vkrivelskaya.github.io/singolo/" class="demo link">Demo</a>
                                 <a data-content="Github" href="https://github.com/vkrivelskaya/singolo" class="git-link link">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="calculator-project project" data-aos="zoom-in" >
+                        <img class="calculator-image image" src="assets/images/calculator.png" alt="Calculator">
+                        <div class="mask mask-1"></div>
+                        <div id="calculator" class="content">
+                            <h2  data-content="Calculator" class="project-heading">Calculator</h2>
+                            <p data-content="This project is the calculator app" class="project-description">This project is the calculator app.
+                            </p>
+                            <p class="technologies">
+                               sass, javascript, github
+                            </p>
+                            <div class="links-container">
+                                <a data-content="Demo" href="https://vkrivelskaya.github.io/calculator/" class="demo link">Demo</a>
+                                <a data-content="Github" href="https://github.com/vkrivelskaya/calculator" class="git-link link">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="whack-mole project" data-aos="zoom-in" >
+                        <img class="whack-mole-image image" src="assets/images/whack_a_mole.png" alt="Whack a mole">
+                        <div class="mask mask-1"></div>
+                        <div id="whake-a-mole" class="content">
+                            <h2 data-content="Whack a mole" class="project-heading">Whack a mole</h2>
+                            <p data-content="Whack a mole is a reaction speed game" class="project-description">Whack a mole is a reaction speed game
+                                in which you have to click on targets and earn points.
+                            </p>
+                            <p class="technologies">
+                                webpack, sass, javascript, github
+                            </p>
+                            <div class="links-container">
+                                <a data-content="Demo" href="https://vkrivelskaya.github.io/whack_a_mole/" class="demo link">Demo</a>
+                                <a data-content="Github" href="https://github.com/vkrivelskaya/whack_a_mole" class="git-link link">Github</a>
                             </div>
                         </div>
                     </div>
